# Fix-My-Corrupt-Windows

./: CMakeLists.txt  README.md  index.html  main.cpp  styles.css
EXE/: exe.md
Installer/: FMCW Installer.msi
include/: Logs.h  ShellExecuteInfoAsAdmin.h  common.h  logger.h
src/: Logs.cpp  ShellExecuteInfoAsAdmin.cpp  logger.cpp  main.cpp
